# etu-schedule

./: .gitignore  README.md  bun.lockb  compare_stuff.js  index.js  package-lock.json  package.json
server/: .gitignore  Cargo.toml  Rocket.toml  apply_blacklist.sh  delete_db.sh  fast-run.sh  gen_tls_key.sh  install_dependencies.sh  migrations_list.sh  migrations_run.sh  open_vim.sh  prepare_db.sh  prod-run.sh  run.sh  todo.txt
server/.cargo/: config.toml
server/.sqlx/: query-076f2638e68d8878e686f6a06fa36a1ddfbf6ce5b3941d4902c14303b57954bd.json  query-0e55afe6bcd74d2aa076f6945779629b2285b5ebe3999af22deb3ad4103f523c.json  query-120a0359f5ffd2ff24341879eb7a8984cae5a98d9895bae71dc253dcf45767e2.json  query-2920d575bbda2905646f3b09c62d05662c0ecd995f4d3eb708914250a3139a7f.json  query-2d62ef309248d3eafc8f3f10cd4d45bf10e1e216312d0dab1897bd72000dbb8b.json  query-2dba5fec63ee3452eea51d4683b3f5dcd15bd8179f9eaad986803f0a852437c0.json  query-2e8a45f41d8a004069176253024ced937e1889ee91e17389ca226cecc88720d5.json  query-2fbfee109eb79a55994342077225914f8ab3d43339eaf5f13e389a09245665d7.json  query-31832db431526861ed374e15c48f7a164f20f1f9403fcbdce2edb02445c7617f.json  query-3703286c760e7c02ee1043a13aaeef5245f366041d3bd80db83cfa89b9c32951.json  query-38971f690ace958c15c4b3eccc6a77d34ffad410e06eb87703fa82180def336f.json  query-393161277f493ad39e03078dd92a8d1c21659c7cfed6988dbcc1dece796793f8.json  query-3a152cf17f7228d5183dc79aa250bd6abd20e20c0f37ca55abda890219e7a022.json  query-3c81e47a8c2d5db2c79f2ed59733caa7a3d95d18492110ab9f1432ba63e47127.json  query-3f6bee4550bedcfab23975ca92e5b721dc0fda8d69a6577ea073027e7744f666.json  query-413ae7f89ed10d91e630f2762fc786865570dac16ea38127d09242996bc8a947.json  query-428fcdddc77bed693951458e72c3b09f5d8c1a6fac8baa56abe0ca98e9356951.json  query-478c52cbc5bf9ac9956270d3452fe7978be207965bdd28b726e04844193e9508.json  (+45 more)
server/db/: sqlite.db
server/src/: etu_api.rs  lib.rs  (+2 more)
(+342 files in other folders)
