[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
rocket = { version = "=0.5.0-rc.3", features = ["json", "tls"] }
rocket_db_pools = { version = "0.1.0-rc.3", features = ["sqlx_sqlite"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"


[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = ["macros", "offline", "migrate"]
