[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
chrono = "0.4.31"
colored = "2.0.4"
fern = "0.6.2"
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
rocket = { version = "=0.5.0-rc.3", features = ["json", "tls", "secrets"] }
rocket_db_pools = { version = "0.1.0-rc.3", features = ["sqlx_sqlite"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"


[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = ["macros", "offline", "migrate"]

[lib]

[[bin]]
name="etu_attendance"
path="src/main.rs"
